--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2",
-    "framer-motion": "^10.12.16",
-    "shadcn/ui": "^0.9.2"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "framer-motion": "^10.12.16"
   }
 }
